--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Outfit:wght@400;700&family=Poppins:wght@700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
 <div class="card">
-  <img class="qr-code" src="./images/image-qr-code.png">
+  <img class="qr-code" src="./images/image-qr-code.png" alt="qr-code-image">
   <div class="text">  
     <h3 class="upr-txt">    Improve your front-end skills by building projects
     </h3>
